<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_balance"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/title_balance" />

    <item
        android:id="@+id/navigation_invest"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_invest" />

    <item
        android:id="@+id/navigation_borrow"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_borrow" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/title_support" />

</menu>
